# clink

./: Cargo.toml  Cross.toml  Dockerfile  README.md  kerberos.sh
.github/workflows/: main.yml
src/: api.rs  main.rs
src/commands/: credits.rs  drop.rs  list.rs  mod.rs  token.rs
src/ui/: .inventory.rs.swp  inventory.rs  logo.txt  machine.rs  menu.rs  mod.rs  store.rs  ui_common.rs
