[package]
name = "clink"
authors = ["Mary Strodl <mstrodl@csh.rit.edu>", "Willard Nilges <wilnil@csh.rit.edu>"]
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.2.2"
serde_json = "1.0.71"
serde = { version = "1.0.130", features = ["derive"] }
http = "0.2.5"
rpassword = "5.0"
users = "0.11.0"
clap = { version = "3.1.6", features = ["cargo"] }
isahc = { version = "1.6.0", features = ["json", "spnego", "static-ssl"] }
cursive = { version = "0.18.0", features = ["crossterm-backend"], default-features = false }
uuid = { version = "1.1.2", features = ["v4"] }
