[package]
name = "clink"
description = "A CLI client for the Computer Science House internet-connected vending machines!"
authors = ["Mary Strodl <mstrodl@csh.rit.edu>", "Willard Nilges <wilnil@csh.rit.edu>"]
version = "0.4.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.2.2"
serde_json = "1.0.82"
serde = { version = "1.0.140", features = ["derive"] }
http = "0.2.8"
rpassword = "7.0.0"
users = "0.11.0"
clap = { version = "4.3.10", features = ["cargo", "derive"] }
isahc = { version = "1.7.2", features = ["json", "spnego", "static-ssl"] }
cursive = { version = "0.20.0", features = ["crossterm-backend"], default-features = false }
uuid = { version = "1.1.2", features = ["v4"] }

[profile.release]
lto = true
codegen-units = 1
